# ExampleBot

./: .gitignore  README.md  main.py  project.bat  pyproject.toml
BotSettings/: __init__.py  bots.py  config.py  decorator.py  logger.py  start_info_out.py  types_messages.py
settings/: __init__.py  bot_info_out.py  bot_logger.py  bots.py  config.py  decorator.py  types_message.py
